fix: update default font colors to yellow

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <input type="text" id="font-primary" list="font-suggestions" value="Noto Sans SC" placeholder="Font name" aria-label="Primary font family">
             <input type="number" id="size-primary" min="8" max="200" value="48" aria-label="Primary font size">
             <span class="size-unit">pt</span>
-            <input type="color" id="color-primary" value="#ffffff" aria-label="Primary font color">
+            <input type="color" id="color-primary" value="#ffff00" aria-label="Primary font color">
           </div>
         </div>
 
@@ -48,7 +48,7 @@
             <input type="text" id="font-secondary" list="font-suggestions" value="Arial" placeholder="Font name" aria-label="Secondary font family">
             <input type="number" id="size-secondary" min="8" max="200" value="48" aria-label="Secondary font size">
             <span class="size-unit">pt</span>
-            <input type="color" id="color-secondary" value="#ffffff" aria-label="Secondary font color">
+            <input type="color" id="color-secondary" value="#ffff00" aria-label="Secondary font color">
           </div>
         </div>
       </section>
