fix: add a quick-start guide

--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
           <span id="slide-counter" role="status" aria-live="polite">0 / 0</span>
           <button id="next-btn" class="nav-btn" aria-label="Next slide">&gt;</button>
         </div>
-        <div class="keyboard-hints">
-          <span class="hint" title="Use arrow keys to navigate slides">
-            <kbd>&larr;</kbd> <kbd>&rarr;</kbd> Navigate slides
-          </span>
+        <div class="quick-start">
+          <div class="quick-start-title">Quick Start</div>
+          <ul class="quick-start-tips">
+            <li>Separate slides with <strong>blank lines</strong></li>
+            <li>Primary & Secondary lyrics pair by section order</li>
+            <li><kbd>&larr;</kbd> <kbd>&rarr;</kbd> Navigate slides</li>
+          </ul>
         </div>
       </section>
     </main>
